# dotfiles

./: Makefile  README.md  config.mk  gitconfig  starship.toml
carapace-build/: Dockerfile
depup/: Cargo.toml
depup/src/: main.rs
dotconfig/: starship-cloud.toml
dotconfig/nushell/: config.nu  env.nu
dotconfig/nvim/: init.lua  lazy-lock.json
neovim/: init.lua
neovim-build/: Dockerfile
nushell-build/: Dockerfile
rust-build/: Dockerfile
starship-build/: Dockerfile
vscode/: settings.json
