[package]
name = "depup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyper = { version = "1.0.0-rc.4", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5.0" }
tokio = { version = "1", features = ["full", "rt", "macros"] }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["std"] }
itertools = { version = "0.11.0" }
semver =  { version = "1.0.18" }
configparser = { version = "3.0.2" }
# http-body-util = "0.1.0-rc.3"
# hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }